# problematic-extension-finder

./: CHANGELOG.md  hie.yaml  problematic-extension-finder.cabal
app/: Main.hs
