cabal-version:      2.4
name:               problematic-extension-finder
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hiroki Tokunaga
maintainer:         tokusan441@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable problematic-extension-finder
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , ghc-lib-parser
                    , ghc-lib-parser-ex
                    , pretty-simple
    hs-source-dirs:   app
    default-language: Haskell2010
